TESTS = test_all.sh

EXTRA_DIST = test_all.sh \
             model_diff.pl \
             combine.BFGS.test combine.BFGSMAP.test combine.GIS.test \
             combine.README combine.conf combine.event combine.model \
             forest.BFGS.test forest.BFGSMAP.test forest.GIS.test \
             forest.README forest.conf forest.event forest.model \
             multifile.1.event multifile.2.event multifile.1.model multifile.2.model \
             multifile.BFGS.test multifile.BFGSMAP.test multifile.GIS.test multifile.conf \
             nonbinary.BFGS.test nonbinary.BFGSMAP.test nonbinary.GIS.test  \
             nonbinary.README nonbinary.conf nonbinary.event nonbinary.model \
             pack.BFGS.test pack.BFGSMAP.test pack.GIS.test \
             pack.README pack.conf pack.event pack.model \
             packtree.BFGS.test packtree.BFGSMAP.test packtree.GIS.test \
             packtree.README packtree.conf packtree.event packtree.model \
             refapprox.BFGS.test refapprox.BFGSMAP.test refapprox.GIS.test \
             refapprox.README refapprox.conf refapprox.event refapprox.model refapprox.ref \
             reference.BFGS.test reference.BFGSMAP.test reference.GIS.test \
             reference.README reference.conf reference.event reference.model reference.ref \
             reftree.BFGS.test reftree.BFGSMAP.test reftree.GIS.test \
             reftree.README reftree.conf reftree.event reftree.model reftree.ref \
             simple.BFGS.test simple.BFGSMAP.test simple.GIS.test \
             simple.README simple.conf simple.event simple.model \
             tree.BFGS.test tree.BFGSMAP.test tree.GIS.test \
             tree.README tree.conf tree.event tree.model \
             variable.BFGS.test variable.BFGSMAP.test variable.GIS.test \
             variable.README variable.conf variable.event variable.model \
             fix.BFGS.test fix.BFGSMAP.test fix.GIS.test \
             fix.README fix.conf fix.event fix.model fix.fixmap \
             combine.GISMAP.test fix.GISMAP.test forest.GISMAP.test \
             multifile.GISMAP.test nonbinary.GISMAP.test pack.GISMAP.test \
             packtree.GISMAP.test refapprox.GISMAP.test reference.GISMAP.test \
             reftree.GISMAP.test simple.GISMAP.test tree.GISMAP.test \
             variable.GISMAP.test combine.BLMVMBC.test fix.BLMVMBC.test \
             forest.BLMVMBC.test multifile.BLMVMBC.test nonbinary.BLMVMBC.test \
             pack.BLMVMBC.test packtree.BLMVMBC.test refapprox.BLMVMBC.test \
             reference.BLMVMBC.test reftree.BLMVMBC.test simple.BLMVMBC.test \
             tree.BLMVMBC.test variable.BLMVMBC.test combine.BLMVMBCMAP.test \
             fix.BLMVMBCMAP.test forest.BLMVMBCMAP.test multifile.BLMVMBCMAP.test \
             nonbinary.BLMVMBCMAP.test pack.BLMVMBCMAP.test packtree.BLMVMBCMAP.test \
             refapprox.BLMVMBCMAP.test reference.BLMVMBCMAP.test reftree.BLMVMBCMAP.test \
             simple.BLMVMBCMAP.test tree.BLMVMBCMAP.test variable.BLMVMBCMAP.test


CLEANFILES = *.output *.log *.tmp

