CHEADERS = \
           AlphaTree.h \
           WeightAccumulator.h \
           AmisWeightAccumulator.h \
           TreeWeightAccumulator.h \
           FixWeightAccumulator.h \
           CRFWeightAccumulator.h \
           AlphaTree.h \
           AmisDriver.h \
           AmisModelFormat.h \
           AmisModelFormatItem.h \
           Array.h \
           ArgumentParser.h \
\
           BzStream.h \
           CRFTable.h \
           CRFTransition.h \
           DataFormat.h \
           DynamicCast.h \
           EmpiricalExpect.h \
           ErrorBase.h \
           APLauncherItem.h \
           APEstimator.h \
           Estimator.h \
           BatchEstimator.h \
           EstimatorLauncher.h \
           Event.h \
           EventBase.h \
           EventCRF.h \
           EventFix.h \
           EventFormat.h \
	   EventReader.h \
	   EventReaderInst.h \
           EventReaderLauncher.h \
           EventReaderLauncherItem.h \
           EventSpace.h \
           EventSpaceLauncher.h \
           EventSpaceLauncherItem.h \
           EventTree.h \
           Feature.h \
           FeatureList.h \
           FeatureParser.h \
           FixedTarget.h \
           GaussianPrior.h \
           GaussianPriorLauncher.h \
           GzStream.h \
           Initializer.h \
           Launcher.h \
           LauncherItem.h \
           LogStream.h \
           Model.h \
           ModelBase.h \
           ModelExpect.h \
           FeatureWeightType.h \
           ModelFormat.h \
           ModelFormatLauncher.h \
           ModelLauncher.h \
           NameTable.h \
	   Option.h \
           OptionManager.h \
           ParameterValue.h \
           Profile.h \
           Property.h \
           PropertyItem.h \
           Real.h \
           StringHash.h \
           StringStream.h \
           Sort.h \
           Tokenizer.h \
           TypeString.h \
           Utility.h \
           VectorOnFile.h \
           ZStream.h \
           configure.h \
           objstream.h \
\
\
           OWBFGSBC.h \
           OWBFGSBCMAP.h \
	   OWBFGSBCLauncherItem.h \
	   OWBFGSBCMAPLauncherItem.h \
\
           BFGS.h \
           BFGSLauncherItem.h \
           BFGSMAP.h \
           BFGSMAPLauncherItem.h \
           BFGSSolver.h \
\
           BLMVMBC.h \
           BLMVMBCLauncherItem.h \
           BLMVMBCMAP.h \
           BLMVMBCMAPLauncherItem.h \
           BLMVMSolver.h \
\
           LMVM.h \
           LMVMLauncherItem.h \
           LMVMMAP.h \
           LMVMMAPLauncherItem.h \
\
           IS.h \
           GIS.h \
           GISLauncherItem.h \
           GISMAP.h \
           GISMAPLauncherItem.h


pkginclude_HEADERS = $(CHEADERS)

